Add project rename and delete
